--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "commander": "^2.19.0",
+    "delay": "^4.1.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "rxjs": "^6.3.3",
     "sqlite": "^3.0.0"
   },
   "devDependencies": {},
